--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,45 @@
+# === System ===
+.DS_Store
+
+# === IDE ===
+# eclipse
+.settings
+.project
+.classpath
+*_mvn_deploy.launch
+
+# idea
+.idea
+*.iml
+
+# vscode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
+
+# === CMake ===
+bin/
+build/
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+cmake-build-*/
+
 # Prerequisites
 *.d
 
