--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(org_shaneking_iai)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(org_shaneking_iai main.cpp p448.cpp p460.cpp p461.cpp p468.cpp p462.cpp p478.cpp p477.cpp p473.cpp)
+add_executable(org_shaneking_iai main.cpp p448.cpp p460.cpp p461.cpp p468.cpp p462.cpp p478.cpp p477.cpp p473.cpp p474.cpp p472.cpp p471.cpp)
